--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
         depends_on:
             - mongo
         env_file:
-            - .env
+            - stack.env
 
     mongo:
         container_name: mongo
